# cloudflare-workers-script-upload-python

./: .gitignore  README.md  pyproject.toml
src/cloudflare_workers_script_upload_python/: __init__.py  __main__.py
